# ml-trader

./: .gitignore  README.md  api.py  app.py  fundemental.py  pyproject.toml  requirements.in  requirements.txt  trader.py
logs/: MLTrader_2024-08-20_15-09_CxNI0t_settings.json  MLTrader_2024-08-20_15-09_CxNI0t_stats.csv  MLTrader_2024-08-20_15-09_CxNI0t_tearsheet.csv  MLTrader_2024-08-20_15-09_CxNI0t_tearsheet.html  MLTrader_2024-08-20_15-09_CxNI0t_trades.csv  MLTrader_2024-08-20_15-59_yLRBUl_settings.json  MLTrader_2024-08-20_15-59_yLRBUl_stats.csv  MLTrader_2024-08-20_15-59_yLRBUl_tearsheet.csv  MLTrader_2024-08-20_15-59_yLRBUl_tearsheet.html  MLTrader_2024-08-20_15-59_yLRBUl_trades.csv  MLTrader_2024-08-20_15-59_yLRBUl_trades.html  MLTrader_2024-08-20_18-32_OfCA1B_settings.json  MLTrader_2024-08-20_18-32_OfCA1B_stats.csv  MLTrader_2024-08-20_18-32_OfCA1B_tearsheet.csv  MLTrader_2024-08-20_18-32_OfCA1B_tearsheet.html  MLTrader_2024-08-20_18-32_OfCA1B_trades.csv  MLTrader_2024-08-20_18-32_OfCA1B_trades.html  MLTrader_2024-08-20_18-37_oKYPTN_stats.csv  MLTrader_2024-08-20_18-37_oKYPTN_tearsheet.csv  MLTrader_2024-08-20_18-37_oKYPTN_tearsheet.html  MLTrader_2024-08-20_18-37_oKYPTN_trades.csv  MLTrader_2024-08-20_18-46_T1uP2Q_settings.json  MLTrader_2024-08-20_18-46_T1uP2Q_stats.csv  MLTrader_2024-08-20_18-46_T1uP2Q_tearsheet.csv  MLTrader_2024-08-20_18-46_T1uP2Q_tearsheet.html  MLTrader_2024-08-20_18-46_T1uP2Q_trades.csv  MLTrader_2024-08-20_18-46_T1uP2Q_trades.html  MLTrader_2024-08-20_18-54_tym9ET_settings.json  MLTrader_2024-08-20_18-54_tym9ET_stats.csv  (+10 more)
(+4 files in other folders)
