[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-trade-api>=3.2.0",
    "boto3>=1.40.45",
    "datetime>=5.5",
    "flask>=3.1.2",
    "joblib>=1.5.2",
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "tensorflow==2.20",
    "vadersentiment>=3.3.2",
    "yfinance==0.2.58",
]
